--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "tsc -b && node --experimental-require-module ./dist/index.js"
+    "dev": "tsc -b && node --experimental-require-module ./dist/index.js",
+    "start": "tsc -b && node --experimental-require-module ./dist/index.js"
   },
   "keywords": [],
   "author": "",
