--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "tsc -b && node --experimental-require-module ./dist/index.js",
-    "start": "tsc -b && node --experimental-require-module ./dist/index.js"
+    "start": "node --experimental-require-module ./dist/index.js"
   },
   "keywords": [],
   "author": "",
