--- a/backend/package.json
+++ b/backend/package.json
@@ -16,10 +16,12 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "express": "^4.21.2",
     "nanoid": "^5.0.9",
     "ws": "^8.18.0"
   },
   "devDependencies": {
+    "@types/express": "^5.0.0",
     "@types/ws": "^8.5.13"
   }
 }
