--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "nanoid": "^5.0.9",
     "ws": "^8.18.0"
